bug da tela login resolvido, imagem de site em construção adicionado

--- a/src/main/resources/templates/menuAdmMorador.html
+++ b/src/main/resources/templates/menuAdmMorador.html
@@ -21,36 +21,36 @@
     <main>
             <div id="menu-mobile" class="menu-adm-mobile">
                 <div>
-                    <a th:href="@{menu}">
-                        <img class="icone" th:src="{/images/iconeAdm.png}" alt="iconeAdm">
+                    <a th:href="@{menuAdm}">
+                        <img class="icone" th:src="@{/images/iconeAdm.png}" alt="iconeAdm">
                     </a>
                 </div>
                 <div>
                     <a th:href="@{menuAdmMorador}">
-                        <img class="icone" th:src="{/images/iconMorador.png}" alt="iconeMorador">
+                        <img class="icone" th:src="@{/images/iconMorador.png}" alt="iconeMorador">
                     </a>
                 </div>
                 <div>
                     <a th:href="@{menuAdmMorador}">
-                        <img class="icone" th:src="{/images/img/iconConsAgenda.png}" alt="iconeAdm">
+                        <img class="icone" th:src="@{/images/img/iconConsAgenda.png}" alt="iconeAdm">
                     </a>
                 </div>
             </div>
             <div class="painel">
                 <div class="menu-adm">
                     <div>
-                        <a th:href="@{menuAdmMorador}">
-                            <img class="icone" src="../img/iconCrtlAdm.png" alt="iconeAdm">
+                        <a th:href="@{menuAdm}">
+                            <img class="icone" th:src="@{/images/iconCrtlAdm.png}" alt="iconeAdm">
                         </a>
                     </div>
                     <div>
                         <a href="http://">
-                            <img class="icone" src="../img/iconCrtlMorador.png" alt="iconeMorador">
+                            <img class="icone" th:src="@{/images/iconCrtlMorador.png}" alt="iconeMorador">
                         </a>
                     </div>
                     <div>
                         <a href="http://">
-                            <img class="icone" src="../img/iconCrtlConsAgend.png" alt="iconeAdm">
+                            <img class="icone" th:src="@{/images/iconCrtlConsAgend.png}" alt="iconeAdm">
                         </a>
                     </div>
                 </div>
@@ -59,12 +59,12 @@
                     <div class="painel-menu" >
                         <div>
                             <a href="http://">
-                                <img class="icone-menu-adm" src="../img/iconCtrlAgendarServico.png" alt="iconeAdm">
+                                <img class="icone-menu-adm" th:src="@{/images/iconCtrlAgendarServico.png}" alt="iconeAdm">
                             </a>
                         </div>
                         <div>
                             <a href="http://">
-                                <img class="icone-menu-adm" src="../img/iconCtrlCadSecretaria.png" alt="iconeMorador">
+                                <img class="icone-menu-adm" th:src="@{/images/iconCtrlCadSecretaria.png}" alt="iconeMorador">
                             </a>
                         </div>
                        
