--- a/src/main/resources/static/css/responsivo.css
+++ b/src/main/resources/static/css/responsivo.css
@@ -1,24 +1,4 @@
-@media screen and (max-width:414px){
-    .cadeado{
-        display: none;
-    }
-}
-
-
-/*tela menu********************/
-@media screen and (max-width:414px){
-    .boas-vindas{
-        display: none;
-    }
-    .menu{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-    }
-}
-/* TELA MENU ADM********************/
-@media screen and (max-width:414px){
+@media screen and (max-width:360px) {
     .boas-vindas{
         display: none;
     }
@@ -57,13 +37,88 @@
         align-items: center;
         justify-content: center;
     }
+    .alinhamento{
+       
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        align-content: center;
 }
-/*
-width 375
-414
-390
-393
-360
-412
-280***
-*/
+}
+
+/* TELA MENU ADM********************/
+@media screen and (max-width:414px) {
+   .cadeado{
+        display: none;
+    }
+    .menu{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .boas-vindas{
+        display: none;
+    }
+    
+    .icone-menu{
+        display: block;
+    }
+    
+   
+    .menu-adm-mobile{
+        display: none;
+        position: absolute;
+        background-color: #74b9ff;
+        width: 300px;
+        text-align: center;
+       
+    }
+    .menu-adm{
+        display: none;
+    }
+    .container-painel{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 600px;
+    }
+    .icone-menu-adm{
+        width: 150px;
+        height: auto;
+    }
+    .painel-menu{
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+    }
+    .painel{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .alinhamento-mobile{
+       
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        align-content: center;
+        
+    }
+    .desktop{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+    .input{
+        width: 300px;
+        padding: 10px;
+        border-radius: 5px;
+    }
+}
